--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Hi, this is a test github web hosting</h1>
+
+    <h1 style="text-align: center;">Hi, this is a test github web hosting</h1>
 </body>
 
 </html>
